====
News
====

IPython 1.0
-----------

IPython 1.0 was released on August 8, 2013, after nearly twelve years of development.
This release sees numerous improvements	from the 0.13 series, and some significant
API reorganisations. `Install <install.html>`__ it now, or see the
`release notes <http://ipython.org/ipython-doc/rel-1.0.0/whatsnew/version1.0.html>`__
for more details.

This is just the first part of an ambitious development schedule. We aim
to release IPython 2.0 some time in December.

The first IPython book
----------------------

On April 25 2013, Cyrille Rossant published the first IPython-focused book:
`Learning IPython for Interactive Computing and Data Visualization
<http://www.packtpub.com/learning-ipython-for-interactive-computing-and-data-visualization/book>`_,
for which `Matthias Bussonnier <https://github.com/Carreau>`_ was a technical
reviewer. We thank Packt Publishing for donating a portion of the proceeds from
this book to support IPython's development.

FSF Award
---------

On March 23 2013, Fernando Perez was awarded the `2012 Award for the
Advancement of Free Software
<http://www.fsf.org/news/2012-free-software-award-winners-announced-2>`__ for
the creation of IPython and his work in the Scientific Python community. More
details are available in `this profile
<http://vcresearch.berkeley.edu/news/wresting-new-tricks-python-fernando-perez-wins-2012-award-advancement-free-software>`_
from UC Berkeley.

PyCon 2013 Tutorial
-------------------

Fernando Perez, Brian Granger and Min Ragan-Kelley presented `in-depth tutorial
about IPython
<http://pyvideo.org/video/1652/ipython-in-depth-high-productivity-interactive-a-0>`_.  It covers IPython's architecture and hands-on examples on customization,
embedding, effective uses of the various applications, the architecture of the
web notebook and how to use IPython for parallel and distributed computing.
  
IPython 0.13.2
--------------
