@@ -249,6 +249,9 @@ supports Python 2.5, and can be used with Python 2.4.</p>
 <div class="section" id="announcements">
 <h1>Announcements<a class="headerlink" href="#announcements" title="Permalink to this headline">¶</a></h1>
 <ul class="simple">
+<li><strong>Microsoft donates $100,000 to IPython:</strong> in August 2013, Microsoft
+<a class="reference external" href="microsoft-donation-2013.html">contributed $100,000</a> to support the
+continued development of IPython.</li>
 <li><strong>IPython 1.0</strong> We are very pleased to announce the release of IPython
 1.0, nearly twelve years after the first release of IPython 0.0.1.
 <a class="reference external" href="install.html">Install</a> it now, or read about the changes in
@@ -273,7 +276,7 @@ computing.</li>
 <a class="reference external" href="sloan-grant.html">grant</a> which is funding the bulk of the work, as well as
 our <a class="reference external" href="https://github.com/ipython/ipython/wiki/Roadmap:-IPython">roadmap</a> for achieving the grant&#8217;s objectives.  <a class="reference external" href="roadmap-announcement.html">Read on for more details</a>.</li>
 <li><strong>Sloan Foundation grant</strong>: IPython has been awarded a $1.15 million grant
-from the <a class="reference external" href="http://www.sloan.org/">Alfred P. Sloan Foundation</a>. This will
+from the <a href="#id4"><span class="problematic" id="id5">`Alfred P. Sloan Foundation`_</span></a>. This will
 support several core developers, allowing them to focus on building the
 IPython Notebook into a tool for open, collaborative, reproducible scientific
 computing. We&#8217;ll also be bringing developers together for two sprints each
