@@ -219,6 +219,10 @@ support IPython's development." > </a>
             
   <div class="section" id="news">
 <h1>News<a class="headerlink" href="#news" title="Permalink to this headline">¶</a></h1>
+<div class="section" id="microsoft-donation">
+<h2>Microsoft donation<a class="headerlink" href="#microsoft-donation" title="Permalink to this headline">¶</a></h2>
+<p>In August 2013, Microsoft <a class="reference external" href="microsoft-donation-2013.html">contributed $100,000</a> to support the continued development of IPython.</p>
+</div>
 <div class="section" id="ipython-1-0">
 <h2>IPython 1.0<a class="headerlink" href="#ipython-1-0" title="Permalink to this headline">¶</a></h2>
 <p>IPython 1.0 was released on August 8, 2013, after nearly twelve years of development.
